# pencil_mob

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Camera.cpp  Camera.h  CanvasWidget.cpp  CanvasWidget.h  ClientMainWindow.cpp  ClientMainWindow.h  Layer.cpp  Layer.h  LayerId.h  MainWindow.cpp  MainWindow.h  MessageHandler.cpp  MessageHandler.h  MessageSender.h  Painting.cpp  Painting.h  ServerMainWindow.cpp  ServerMainWindow.h  Stroke.cpp  Stroke.h  TextProgress.h  enums.cpp  enums.h  generate.py  main.cpp  main_client.cpp  main_server.cpp  messages.h  pencil_mob.ui  pencil_mob_server.ui  transport.cpp  transport.h
src/commands/: AddDeleteLayerCommand.cpp  AddDeleteLayerCommand.h  AddLayerCommand.cpp  AddLayerCommand.h  AddStrokeToCurrentLayerCommand.cpp  AddStrokeToCurrentLayerCommand.h  ClientCommand.cpp  ClientCommand.h  DeleteLayerCommand.cpp  DeleteLayerCommand.h  DuplicateLayerCommand.cpp  DuplicateLayerCommand.h  LayerCommandBase.cpp  LayerCommandBase.h  MoveLayerCommand.cpp  MoveLayerCommand.h  RemoveLayerCommand.cpp  RemoveLayerCommand.h  RenameLayerCommand.cpp  RenameLayerCommand.h
src/tools/: EraserTool.cpp  EraserTool.h  PenTool.cpp  PenTool.h  Tool.cpp  Tool.h
src/widgets/: CanvasWidget.cpp  CanvasWidget.h  ColorChooserWidget.cpp  ColorChooserWidget.h  CustomPaintWidget.cpp  CustomPaintWidget.h  LayerButtonWidget.cpp  LayerButtonWidget.h  LayersWidget.cpp  LayersWidget.h  ListOfVisibleUsersWidget.cpp  ListOfVisibleUsersWidget.h  MessagesWidget.cpp  MessagesWidget.h  ToolSelectorButton.cpp  ToolSelectorButton.h  ToolSelectorWidget.cpp  ToolSelectorWidget.h  UserWidget.cpp  UserWidget.h  color_chooser.ui  layer_button.ui  layers.ui  messages.ui  tool_selector.ui  user.ui  users.ui
test/: CMakeLists.txt  messages_check.cpp  transport_check.cpp
